all arrows fixed, header fixed, scrollbar fixed, browse tooltip done

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -183,8 +183,7 @@ color: rgba(35, 33, 30, 0.6);
 }
 .leftPanel{
   padding: 0px;
-  max-height: 600px;
-  overflow: auto;
+
 }
 .leftPanel li span{
 font-size: 16px !important;
@@ -534,6 +533,10 @@ li.has-children.is-open > .acnav__label {
   margin-bottom: 20px;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
+} */
+.tree{
+  max-height: 100vh;
+  overflow: auto;
 }
